final with onchange

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
   <label>C:</label>
-  <input type="number" id="c"  ><br><br><br>
+  <input type="number" id="c"  onchange='ctof()' ><br><br><br>
   
   <button type="button"
 onclick=" ctof()">
